2009-10-26  Sancho Lerena <slerena@artica.es>

	* Updated conf files: temporal variable to use /tmp by default.

	Updated spec revision.

2009-10-17  Sancho Lerena <slerena@artica.es>

	* linux/pandora_agent_daemon: Fixed problems in small term with    
	PID detection.

	* unix/Linux/pandora_agent_daemon: Same as above.

2009-09-30  Sancho Lerena <slerena@artica.es>

	* win32/installer/pandora.mpi: Updated installer.

	* linux/pandora_agent_installer: Fixed "accidental" deletion
	of /var/spool/pandora uninstalling the agent, now only
	delete /var/spool/pandora/data_out 

2009-09-25  Evi Vanoost <vanooste@rcbi.rochester.edu>

	* mac_osx/pandora_fms/pandora_fms, 
	mac_osx/pandora_fms/StartupParameters.plist: Updated for 3.0

	* mac_osx/tentacle_client: Added for 3.0

	* mac_osx/pandora_agent: Copied from Linux and modified

	* mac_osx/pandora_agent.conf: Slight modifications for 3.0

	* mac_osx/pandora_agent_installer: Copied from Linux and 
	modified

	* mac_osx/Pandora FMS.pmdoc: PackageMaker definition file 
	to create Mac Packages for easy (automatic) deployment

	* mac_osx/Pandora Agent 3.0 for Mac: Package (installer) for 
	Mac. This is an easy (click-to-run) package.


2009-09-24  Sancho Lerena zslerena@artica.es>

	* linux/agent_installer: Fixed a typo in old setup backup cmd. 

2009-09-18  sancho Lerena <slerena@artica.es>

	* unix: Added subdir with local daemon script and sample conf
	file for each supported system: Linux, AIX, Solaris and HPUX. 

	* Installer now detects OS and install startup scripts and 
	conf depending on OS.

	* Updated RPM spec for Linux agent.

	* Plugins: Let here (at this time) only "common" plugins,
	in the future will be common plugins and OS dependendant 
	plugins.

2009-09-14  Ramon Novoa  <rnovoa@artica.es>

	* unix, unix/pandora_agent_installer,
	  unix/plugins, unix/pandora_agent,
	  unix/pandora_agent_daemon, unix/AUTHORS,
	  unix/pandora_agent.conf, unix/COPYING,
	  unix/pandora_agent.spec, unix/tentacle_client,